# backtest_core

./: .env.example  .env.numba  .flake8  .gitignore  .pylintrc  .tmp_activer_logs_diagnostic.md  .tmp_analyse_selection_tokens.md  .tmp_analysis.json  .tmp_analyze_sandbox.py  .tmp_diagnostic_flow_market_selection.md  .tmp_diagnostic_numba_performance.md  .tmp_diagnostic_token_selection.py  .tmp_head_tests_test_strategy_builder.py  .tmp_patch_numba_prealloc.py  .tmp_test_market_selection.py  .tmp_toggle_llm_behavior.md  AGENTS.md  ANALYSE_OPTIMISATION_NUMBA.md  AUDIT.md  AUDIT_MARKET_SELECTION.md  BILAN_PROGRESSION.md  BOLLINGER_FIX_REPORT.md  CATALOGUE_STRATEGIES_INTEGRATION.md  CHANGELOG.md  CHANGELOG_AUDIT.md  CLAUDE.md  CONFIGURATION_FINALE.md  CORRECTION_SUMMARY.md  CRITICAL_FIXES_2025-12-16.md  Code_de_backtest_corev2_3_moteur_powerfull_le_feux_c'est_ici.md  DEAD_CODE_REPORT.md  DETAILS_FONCTIONNEMENT.md  DOCUMENTATION_SUMMARY.md  ENVIRONMENT.md  FIX_3_PROBLEMES_UI.md  FIX_FINAL_MARKET_SELECTION.md  FIX_MARKET_SELECTION_LLM.md  FIX_MULTI_STRATEGY_PARAMS.md  FIX_PLAN.md  FIX_PROCESSPOOL_CRASH.md  (+158 more)
.github/: CLI_REFERENCE.md  ROADMAP.md  agent.md  copilot-instructions.md
.tmp/: check_ranges.py  optimize_cpu_saturation.md  test_chunk_tuning.py  test_perf_bollinger.py  test_perf_short.py
agents/: README.md  __init__.py  __init__.py.bak  analyst.py  analyst.py.bak  autonomous_strategist.py  autonomous_strategist.py.bak  backtest_executor.py  backtest_executor.py.bak  base_agent.py  base_agent.py.bak  builder_constants.py  builder_diagnostics.py  builder_objectives.py  builder_validation.py  critic.py  critic.py.bak  indicator_context.py  indicator_context.py.bak  integration.py  integration.py.bak  llm_client.py  llm_config.py  llm_config.py.bak  model_config.py  ollama_manager.py  ollama_manager.py.bak  orchestration_logger.py  orchestrator.py  orchestrator.py.bak  state_machine.py  state_machine.py.bak  strategist.py  strategist.py.bak  strategy_builder.py  strategy_builder.py.bak_checkpoint_refactor_20260224_183127  thought_stream.py  validator.py  validator.py.bak
backtest/: __init__.py  __init__.py.bak  config_storage.py  engine.py  engine.py.bak  errors.py  errors.py.bak  execution.py  execution.py.bak  execution_fast.py  execution_fast.py.bak  facade.py  facade.py.bak  gpu_context.py  gpu_queue.py  metrics_tier_s.py  metrics_tier_s.py.bak  monte_carlo.py  monte_carlo.py.bak  optuna_optimizer.py  optuna_optimizer.py.bak  pareto.py  pareto.py.bak  performance.py  performance.py.bak  performance_numba.py  performance_numba.py.bak  report_generator.py  result_store.py  results_organizer.py  returns_safe.py  returns_safe.py.bak  simulator.py  simulator.py.bak  simulator_fast.py  simulator_fast.py.bak  storage.py  storage.py.bak  sweep.py  sweep.py.bak  (+10 more)
backtest_results/: atr_grid_mini_1767234564.csv  index.csv  index.json
catalog/: __init__.py  builder_export.py  chainer.py  example_config.json  fingerprint.py  gating.py  models.py  ranges_loader.py  runner.py  sanity.py  strategy_catalog.py
cli/: __init__.py  __init__.py.bak  __main__.py  commands.py  cross_token.py  formatters.py  report_generator.py  sweep_executor.py  validators.py
config/: documentation_index.toml  gpu_config_30gb_ram.py  indicator_ranges.toml  market_selection.json  market_selection.py  profitable_presets.toml  strategy_catalog.json  token_profiles.json
data/: __init__.py  __init__.py.bak  config.py  config.py.bak  loader.py  (+4 more)
(+13323 files in other folders)
